# generic-genetics

./: .clang-format  .gitignore  CMakeLists.txt
examples/moon-lander/: .gitignore  CMakeLists.txt
examples/moon-lander/include/: bot_lander.hpp  crossover.hpp  evaluator.hpp  generator.hpp  lander.hpp  map.hpp  mutation.hpp  texture_loader.hpp
examples/moon-lander/src/: bot_lander.cpp  crossover.cpp  evaluator.cpp  generator.cpp  lander.cpp  main.cpp  map.cpp  mutation.cpp  texture_loader.cpp
examples/mystery-sentence/: CMakeLists.txt
examples/mystery-sentence/include/: crossover.hpp  evaluator.hpp  generator.hpp  mutation.hpp
examples/mystery-sentence/src/: crossover.cpp  evaluator.cpp  generator.cpp  main.cpp  mutation.cpp
include/: MyCrossover.hpp  MyEvaluator.hpp  MyGenerator.hpp  criterion.hpp  generate.hpp  geneticAlgorithm.hpp  random.hpp  selectors.hpp
include/criterion/: combined.hpp  criterion.hpp  iterations.hpp  mark.hpp  plateau.hpp
include/selectors/: elitism.hpp  rank.hpp  rating.hpp  selectors.hpp  tournament.hpp
src/: MyCrossover.cpp  MyEvaluator.cpp  MyGenerator.cpp  main.cpp  random.cpp
src/criterion/: combined.cpp  iterations.cpp  mark.cpp  plateau.cpp
